Made section reader even more flexible and added projections