@@ -24,6 +24,7 @@
  */
 package org.geysermc.databaseutils.processor.query;
 
+import static org.geysermc.databaseutils.processor.util.CollectionUtils.join;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 import java.util.Collections;
@@ -34,9 +35,12 @@ import org.geysermc.databaseutils.processor.query.section.by.keyword.LessThanKey
 import org.geysermc.databaseutils.processor.query.section.factor.AndFactor;
 import org.geysermc.databaseutils.processor.query.section.factor.Factor;
 import org.geysermc.databaseutils.processor.query.section.factor.OrFactor;
+import org.geysermc.databaseutils.processor.query.section.factor.ProjectionFactor;
 import org.geysermc.databaseutils.processor.query.section.factor.VariableByFactor;
 import org.geysermc.databaseutils.processor.query.section.factor.VariableOrderByFactor;
 import org.geysermc.databaseutils.processor.query.section.order.OrderDirection;
+import org.geysermc.databaseutils.processor.query.section.projection.keyword.DistinctProjectionKeyword;
+import org.geysermc.databaseutils.processor.query.section.projection.keyword.TopProjectionKeyword;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -46,31 +50,61 @@ public class KeywordsReaderTests {
     @ParameterizedTest
     @MethodSource("okSimpleInputs")
     void okSimple(
-            String input, List<String> variables, String action, List<Factor> byFactors, List<Factor> orderByFactors) {
-        commonOkLogic(input, variables, action, byFactors, orderByFactors);
+            String input,
+            List<String> variables,
+            String action,
+            List<ProjectionFactor> projection,
+            List<Factor> byFactors,
+            List<Factor> orderByFactors) {
+        commonOkLogic(input, variables, action, projection, byFactors, orderByFactors);
     }
 
     @ParameterizedTest
     @MethodSource("okComplexInputs")
     void okComplex(
-            String input, List<String> variables, String action, List<Factor> byFactors, List<Factor> orderByFactors) {
-        commonOkLogic(input, variables, action, byFactors, orderByFactors);
+            String input,
+            List<String> variables,
+            String action,
+            List<ProjectionFactor> projection,
+            List<Factor> byFactors,
+            List<Factor> orderByFactors) {
+        commonOkLogic(input, variables, action, projection, byFactors, orderByFactors);
     }
 
     private void commonOkLogic(
-            String input, List<String> variables, String action, List<Factor> byFactors, List<Factor> orderByFactors) {
+            String input,
+            List<String> variables,
+            String action,
+            List<ProjectionFactor> projections,
+            List<Factor> byFactors,
+            List<Factor> orderByFactors) {
         var result = new KeywordsReader(input, variables).read();
         Assertions.assertEquals(action, result.actionName());
+
+        if (projections == null) {
+            Assertions.assertNull(result.projection());
+        } else {
+            Assertions.assertNotNull(result.projection());
+            var actualProjection = result.projection().projections();
+            Assertions.assertEquals(
+                    projections.size(), actualProjection.size(), () -> "For: %s\nExpected:\n%s\nActual:\n%s"
+                            .formatted(input, join(projections), join(actualProjection)));
+
+            for (int i = 0; i < projections.size(); i++) {
+                Assertions.assertEquals(projections.get(i), actualProjection.get(i));
+            }
+        }
 
         if (byFactors == null) {
             Assertions.assertNull(result.bySection());
         } else {
             Assertions.assertNotNull(result.bySection());
-            var actualVariables = result.bySection().factors();
-            Assertions.assertEquals(byFactors.size(), actualVariables.size());
+            var actualFactors = result.bySection().factors();
+            Assertions.assertEquals(byFactors.size(), actualFactors.size(), () -> "For: %s\nExpected:\n%s\nActual:\n%s"
+                    .formatted(input, join(byFactors), join(actualFactors)));
 
             for (int i = 0; i < byFactors.size(); i++) {
-                Assertions.assertEquals(byFactors.get(i), actualVariables.get(i));
+                Assertions.assertEquals(byFactors.get(i), actualFactors.get(i));
             }
         }
 
@@ -78,47 +112,70 @@ public class KeywordsReaderTests {
             Assertions.assertNull(result.orderBySection());
         } else {
             Assertions.assertNotNull(result.orderBySection());
-            var actualVariables = result.orderBySection().factors();
-            Assertions.assertEquals(orderByFactors.size(), actualVariables.size());
+            var actualFactors = result.orderBySection().factors();
+            Assertions.assertEquals(
+                    orderByFactors.size(), actualFactors.size(), () -> "For: %s\nExpected:\n%s\nActual:\n%s"
+                            .formatted(input, join(orderByFactors), join(actualFactors)));
 
             for (int i = 0; i < orderByFactors.size(); i++) {
-                Assertions.assertEquals(orderByFactors.get(i), actualVariables.get(i));
+                Assertions.assertEquals(orderByFactors.get(i), actualFactors.get(i));
             }
         }
     }
 
     static Stream<Arguments> okSimpleInputs() {
         return Stream.of(
-                arguments("update", Collections.emptyList(), "update", null, null),
+                arguments("update", Collections.emptyList(), "update", null, null, null),
+                arguments("find", Collections.emptyList(), "find", null, null, null),
+                arguments(
+                        "findTitle",
+                        List.of("title"),
+                        "find",
+                        List.of(new ProjectionFactor(null, "title")),
+                        null,
+                        null),
+                arguments(
+                        "findTop3Title",
+                        List.of("title"),
+                        "find",
+                        List.of(
+                                new ProjectionFactor(new TopProjectionKeyword(3), null),
+                                new ProjectionFactor(null, "title")),
+                        null,
+                        null),
                 arguments(
                         "updateByUsername",
                         List.of("username"),
                         "update",
+                        null,
                         List.of(new VariableByFactor("username", new EqualsKeyword())),
                         null),
-                arguments("find", Collections.emptyList(), "find", null, null),
                 arguments(
                         "findByUsername",
                         List.of("username"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("username", new EqualsKeyword())),
                         null),
                 arguments(
                         "findByUniqueId",
                         List.of("uniqueId"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("uniqueId", new EqualsKeyword())),
                         null),
                 arguments(
                         "findByUsernameLessThan",
                         List.of("username"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("username", new LessThanKeyword())),
                         null),
                 arguments(
                         "findByUniqueIdLessThan",
                         List.of("uniqueId"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("uniqueId", new LessThanKeyword())),
                         null),
                 arguments(
@@ -126,47 +183,55 @@ public class KeywordsReaderTests {
                         List.of("username"),
                         "find",
                         null,
+                        null,
                         List.of(new VariableOrderByFactor("username", OrderDirection.DEFAULT))),
                 arguments(
                         "findOrderByUsernameAsc",
                         List.of("username"),
                         "find",
                         null,
+                        null,
                         List.of(new VariableOrderByFactor("username", OrderDirection.ASCENDING))),
                 arguments(
                         "findByUsernameOrderByUsername",
                         List.of("username"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("username", new EqualsKeyword())),
                         List.of(new VariableOrderByFactor("username", OrderDirection.DEFAULT))),
                 arguments(
                         "findByUsernameOrderByUsernameAsc",
                         List.of("username"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("username", new EqualsKeyword())),
                         List.of(new VariableOrderByFactor("username", OrderDirection.ASCENDING))),
                 arguments(
                         "findByUsernameOrderByUsernameDesc",
                         List.of("username"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("username", new EqualsKeyword())),
                         List.of(new VariableOrderByFactor("username", OrderDirection.DESCENDING))),
                 arguments(
                         "findByUniqueIdOrderByUsername",
                         List.of("uniqueId", "username"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("uniqueId", new EqualsKeyword())),
                         List.of(new VariableOrderByFactor("username", OrderDirection.DEFAULT))),
                 arguments(
                         "findByUsernameLessThanOrderByUniqueId",
                         List.of("username", "uniqueId"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("username", new LessThanKeyword())),
                         List.of(new VariableOrderByFactor("uniqueId", OrderDirection.DEFAULT))),
                 arguments(
                         "findByUniqueIdLessThanOrderByUniqueId",
                         List.of("uniqueId"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("uniqueId", new LessThanKeyword())),
                         List.of(new VariableOrderByFactor("uniqueId", OrderDirection.DEFAULT))));
     }
@@ -174,9 +239,20 @@ public class KeywordsReaderTests {
     static Stream<Arguments> okComplexInputs() {
         return Stream.of(
                 arguments(
+                        "findTop3DistinctTitle",
+                        List.of("title"),
+                        "find",
+                        List.of(
+                                new ProjectionFactor(new TopProjectionKeyword(3), null),
+                                new ProjectionFactor(new DistinctProjectionKeyword(), null),
+                                new ProjectionFactor(null, "title")),
+                        null,
+                        null),
+                arguments(
                         "findByUsernameAndPassword",
                         List.of("username", "password"),
                         "find",
+                        null,
                         List.of(
                                 new VariableByFactor("username", new EqualsKeyword()),
                                 AndFactor.INSTANCE,
@@ -186,6 +262,7 @@ public class KeywordsReaderTests {
                         "findByUniqueIdAndPassword",
                         List.of("uniqueId", "password"),
                         "find",
+                        null,
                         List.of(
                                 new VariableByFactor("uniqueId", new EqualsKeyword()),
                                 AndFactor.INSTANCE,
@@ -195,6 +272,7 @@ public class KeywordsReaderTests {
                         "findByUniqueIdAndUniqueName",
                         List.of("uniqueId", "uniqueName"),
                         "find",
+                        null,
                         List.of(
                                 new VariableByFactor("uniqueId", new EqualsKeyword()),
                                 AndFactor.INSTANCE,
@@ -204,6 +282,7 @@ public class KeywordsReaderTests {
                         "findByUsernameLessThanAndPassword",
                         List.of("username", "password"),
                         "find",
+                        null,
                         List.of(
                                 new VariableByFactor("username", new LessThanKeyword()),
                                 AndFactor.INSTANCE,
@@ -213,15 +292,39 @@ public class KeywordsReaderTests {
                         "findByUniqueIdLessThanOrMyHash",
                         List.of("uniqueId", "myHash"),
                         "find",
+                        null,
                         List.of(
                                 new VariableByFactor("uniqueId", new LessThanKeyword()),
                                 OrFactor.INSTANCE,
                                 new VariableByFactor("myHash", new EqualsKeyword())),
                         null),
                 arguments(
+                        "findTop3TitleByUsername",
+                        List.of("title", "username"),
+                        "find",
+                        List.of(
+                                new ProjectionFactor(new TopProjectionKeyword(3), null),
+                                new ProjectionFactor(null, "title")),
+                        List.of(new VariableByFactor("username", new EqualsKeyword())),
+                        null),
+                arguments(
+                        "findTop3DistinctTitleByUsernameAndPassword",
+                        List.of("title", "username", "password"),
+                        "find",
+                        List.of(
+                                new ProjectionFactor(new TopProjectionKeyword(3), null),
+                                new ProjectionFactor(new DistinctProjectionKeyword(), null),
+                                new ProjectionFactor(null, "title")),
+                        List.of(
+                                new VariableByFactor("username", new EqualsKeyword()),
+                                AndFactor.INSTANCE,
+                                new VariableByFactor("password", new EqualsKeyword())),
+                        null),
+                arguments(
                         "findOrderByUsernameOrEmail",
                         List.of("username", "email"),
                         "find",
+                        null,
                         null,
                         List.of(
                                 new VariableOrderByFactor("username", OrderDirection.DEFAULT),
@@ -232,6 +335,7 @@ public class KeywordsReaderTests {
                         List.of("username", "password"),
                         "find",
                         null,
+                        null,
                         List.of(
                                 new VariableOrderByFactor("username", OrderDirection.ASCENDING),
                                 OrFactor.INSTANCE,
@@ -240,6 +344,7 @@ public class KeywordsReaderTests {
                         "findByUsernameOrderByUsernameAndPassword",
                         List.of("username", "password"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("username", new EqualsKeyword())),
                         List.of(
                                 new VariableOrderByFactor("username", OrderDirection.DEFAULT),
@@ -249,6 +354,7 @@ public class KeywordsReaderTests {
                         "findByUsernameOrderByUsernameAscOrPasswordDesc",
                         List.of("username", "password"),
                         "find",
+                        null,
                         List.of(new VariableByFactor("username", new EqualsKeyword())),
                         List.of(
                                 new VariableOrderByFactor("username", OrderDirection.ASCENDING),
@@ -258,6 +364,7 @@ public class KeywordsReaderTests {
                         "findByUniqueIdLessThanOrUsernameOrderByUniqueIdAndPingDesc",
                         List.of("uniqueId", "username", "ping"),
                         "find",
+                        null,
                         List.of(
                                 new VariableByFactor("uniqueId", new LessThanKeyword()),
                                 OrFactor.INSTANCE,
